--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <title>timeline</title>
   <link rel='stylesheet prefetch' href='https://cdn.jsdelivr.net/font-hack/2.020/css/hack-extended.min.css'>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="attr/css/style.css">
 </head>
 
 <body>
 
 <div id='top'>
   <h1>Раскадровка</h1><span id='t'></span>
-  <video id="v" src="/vi.mp4" width='200px' height="auto" autoplay></video>
+  <video id="v" src="/attr/vi.mp4" width='200px' height="auto" autoplay></video>
   <canvas id='c' />
 </div>
 <ul class="timeline" id="ul">
 </ul>
 
 
-    <script src="js/index.js"></script>
+    <script src="attr/js/index.js"></script>
 
 </body>
 </html>
