--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>timeline</title>
   <link rel='stylesheet prefetch' href='https://cdn.jsdelivr.net/font-hack/2.020/css/hack-extended.min.css'>
-  <link rel="stylesheet" href="attr/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 </ul>
 
 
-    <script src="attr/js/index.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 </html>
